--- a/translations/gazette+intl-icu.en.xlf
+++ b/translations/gazette+intl-icu.en.xlf
@@ -1940,7 +1940,7 @@
       </notes>
       <segment>
         <source>Drops</source>
-        <target>Drops</target>
+        <target>Toast</target>
       </segment>
     </unit>
     <unit id="1BKWK3G" name="Whitie">
@@ -1951,7 +1951,7 @@
       </notes>
       <segment>
         <source>Whitie</source>
-        <target>Whitie</target>
+        <target>Ernie</target>
       </segment>
     </unit>
     <unit id="FuPKQSG" name="Fettwanst">
@@ -1962,7 +1962,7 @@
       </notes>
       <segment>
         <source>Fettwanst</source>
-        <target>Fettwanst</target>
+        <target>Click</target>
       </segment>
     </unit>
     <unit id="8wISp9n" name="Gizmo">
@@ -1973,7 +1973,7 @@
       </notes>
       <segment>
         <source>Gizmo</source>
-        <target>Gizmo</target>
+        <target>Frank</target>
       </segment>
     </unit>
     <unit id="M8G8Yog" name="Romero">
@@ -1984,7 +1984,7 @@
       </notes>
       <segment>
         <source>Romero</source>
-        <target>Romero</target>
+        <target>Vartan</target>
       </segment>
     </unit>
     <unit id="DA7kWwn" name="Krümel">
@@ -1995,7 +1995,7 @@
       </notes>
       <segment>
         <source>Krümel</source>
-        <target>Krümel</target>
+        <target>Luath</target>
       </segment>
     </unit>
     <unit id="dacOMI_" name="Trolli">
@@ -2006,7 +2006,7 @@
       </notes>
       <segment>
         <source>Trolli</source>
-        <target>Trolli</target>
+        <target>Chas</target>
       </segment>
     </unit>
     <unit id="mtgJWTb" name="Warpie">
@@ -2017,7 +2017,7 @@
       </notes>
       <segment>
         <source>Warpie</source>
-        <target>Warpie</target>
+        <target>Gigantor</target>
       </segment>
     </unit>
     <unit id="99nqfzm" name="Panda">
@@ -2028,7 +2028,7 @@
       </notes>
       <segment>
         <source>Panda</source>
-        <target>Panda</target>
+        <target>Murphy</target>
       </segment>
     </unit>
     <unit id="3NW1TAO" name="Urmel">
@@ -2039,7 +2039,7 @@
       </notes>
       <segment>
         <source>Urmel</source>
-        <target>Urmel</target>
+        <target>Sheba</target>
       </segment>
     </unit>
     <unit id="wOZq8ar" name="Nuffi">
@@ -2050,7 +2050,7 @@
       </notes>
       <segment>
         <source>Nuffi</source>
-        <target>Nuffi</target>
+        <target>Carwash</target>
       </segment>
     </unit>
     <unit id="uxGIgrQ" name="Kampfzwerg">
@@ -2061,7 +2061,7 @@
       </notes>
       <segment>
         <source>Kampfzwerg</source>
-        <target>Kampfzwerg</target>
+        <target>Bernard</target>
       </segment>
     </unit>
     <unit id="IciG2nh" name="Brummbrumm">
@@ -2072,7 +2072,7 @@
       </notes>
       <segment>
         <source>Brummbrumm</source>
-        <target>Brummbrumm</target>
+        <target>Trousers</target>
       </segment>
     </unit>
     <unit id="FV3hUsg" name="Quälgeist">
@@ -2083,7 +2083,7 @@
       </notes>
       <segment>
         <source>Quälgeist</source>
-        <target>Quälgeist</target>
+        <target>Christian</target>
       </segment>
     </unit>
     <unit id="JaIWQ12" name="Wuschel">
@@ -2094,7 +2094,7 @@
       </notes>
       <segment>
         <source>Wuschel</source>
-        <target>Wuschel</target>
+        <target>K'mere</target>
       </segment>
     </unit>
     <unit id="RnbnUa2" name="Ratte">
@@ -2105,7 +2105,7 @@
       </notes>
       <segment>
         <source>Ratte</source>
-        <target>Ratte</target>
+        <target>abnormally large rat</target>
       </segment>
     </unit>
     <unit id="JaPFGad" name="Ziege">
@@ -2116,7 +2116,7 @@
       </notes>
       <segment>
         <source>Ziege</source>
-        <target>Ziege</target>
+        <target>terrapin</target>
       </segment>
     </unit>
     <unit id="pOPXT6h" name="Pudel">
@@ -2127,7 +2127,7 @@
       </notes>
       <segment>
         <source>Pudel</source>
-        <target>Pudel</target>
+        <target>labradoodle</target>
       </segment>
     </unit>
     <unit id="MZpPqBp" name="Hamster">
@@ -2138,7 +2138,7 @@
       </notes>
       <segment>
         <source>Hamster</source>
-        <target>Hamster</target>
+        <target>fat hamster</target>
       </segment>
     </unit>
     <unit id="zd.g_kB" name="Köter">
@@ -2149,7 +2149,7 @@
       </notes>
       <segment>
         <source>Köter</source>
-        <target>Köter</target>
+        <target>alaskan malamute</target>
       </segment>
     </unit>
     <unit id="rLUU1dx" name="Schwein">
@@ -2160,7 +2160,7 @@
       </notes>
       <segment>
         <source>Schwein</source>
-        <target>Schwein</target>
+        <target>pot-bellied pig</target>
       </segment>
     </unit>
     <unit id="kZlFNSy" name="Erdmännchen">
@@ -2171,7 +2171,7 @@
       </notes>
       <segment>
         <source>Erdmännchen</source>
-        <target>Erdmännchen</target>
+        <target>capybara</target>
       </segment>
     </unit>
     <unit id="RNrqQOQ" name="Wasserschwein">
@@ -2182,7 +2182,7 @@
       </notes>
       <segment>
         <source>Wasserschwein</source>
-        <target>Wasserschwein</target>
+        <target>meerkat</target>
       </segment>
     </unit>
     <unit id="NP2C_HM" name="Sumpfschildkröte">
@@ -2193,7 +2193,7 @@
       </notes>
       <segment>
         <source>Sumpfschildkröte</source>
-        <target>Sumpfschildkröte</target>
+        <target>toyger</target>
       </segment>
     </unit>
     <unit id="i2s2Kep" name="Kätzchen">
@@ -2204,7 +2204,7 @@
       </notes>
       <segment>
         <source>Kätzchen</source>
-        <target>Kätzchen</target>
+        <target>kitten</target>
       </segment>
     </unit>
     <unit id="F6ZgJYM" name="einen Haufen Gerümpel ">
@@ -2325,7 +2325,7 @@
       </notes>
       <segment>
         <source>&lt;strong&gt;{citizen1}s&lt;/strong&gt; {animal} wurde heute Morgen in mehrere Stücke zerfetzt aufgefunden. Ein Stück wurde sogar aus dem Brunnen gefischt. Das erklärt auch den seltsamen Geschmack der Wasserrationen von heute Morgen...</source>
-        <target><![CDATA[<strong>{citizen1}s</strong> {animal} wurde heute Morgen in mehrere Stücke zerfetzt aufgefunden. Ein Stück wurde sogar aus dem Brunnen gefischt. Das erklärt auch den seltsamen Geschmack der Wasserrationen von heute Morgen...]]></target>
+        <target>The {animal} which was christened {mascot} by someone or other was found cut in half this morning. One half was found in the well, which explains the strange-tasting rations today...</target>
       </segment>
     </unit>
     <unit id="BKXfX1n">
