--- a/translations/gazette+intl-icu.es.xlf
+++ b/translations/gazette+intl-icu.es.xlf
@@ -1928,7 +1928,7 @@
       </notes>
       <segment>
         <source>Drops</source>
-        <target>Drops</target>
+        <target>Cachito</target>
       </segment>
     </unit>
     <unit id="1BKWK3G" name="Whitie">
@@ -1939,7 +1939,7 @@
       </notes>
       <segment>
         <source>Whitie</source>
-        <target>Whitie</target>
+        <target>Comotú</target>
       </segment>
     </unit>
     <unit id="FuPKQSG" name="Fettwanst">
@@ -1950,7 +1950,7 @@
       </notes>
       <segment>
         <source>Fettwanst</source>
-        <target>Fettwanst</target>
+        <target>Tifoidea</target>
       </segment>
     </unit>
     <unit id="8wISp9n" name="Gizmo">
@@ -1961,7 +1961,7 @@
       </notes>
       <segment>
         <source>Gizmo</source>
-        <target>Gizmo</target>
+        <target>Pánfilo</target>
       </segment>
     </unit>
     <unit id="M8G8Yog" name="Romero">
@@ -1972,7 +1972,7 @@
       </notes>
       <segment>
         <source>Romero</source>
-        <target>Romero</target>
+        <target>Ungenio</target>
       </segment>
     </unit>
     <unit id="DA7kWwn" name="Krümel">
@@ -1983,7 +1983,7 @@
       </notes>
       <segment>
         <source>Krümel</source>
-        <target>Krümel</target>
+        <target>Ulises</target>
       </segment>
     </unit>
     <unit id="dacOMI_" name="Trolli">
@@ -1994,7 +1994,7 @@
       </notes>
       <segment>
         <source>Trolli</source>
-        <target>Trolli</target>
+        <target>Chester</target>
       </segment>
     </unit>
     <unit id="mtgJWTb" name="Warpie">
@@ -2005,7 +2005,7 @@
       </notes>
       <segment>
         <source>Warpie</source>
-        <target>Warpie</target>
+        <target>Warpy</target>
       </segment>
     </unit>
     <unit id="99nqfzm" name="Panda">
@@ -2016,7 +2016,7 @@
       </notes>
       <segment>
         <source>Panda</source>
-        <target>Panda</target>
+        <target>Chancla</target>
       </segment>
     </unit>
     <unit id="3NW1TAO" name="Urmel">
@@ -2027,7 +2027,7 @@
       </notes>
       <segment>
         <source>Urmel</source>
-        <target>Urmel</target>
+        <target>Choclo</target>
       </segment>
     </unit>
     <unit id="wOZq8ar" name="Nuffi">
@@ -2038,7 +2038,7 @@
       </notes>
       <segment>
         <source>Nuffi</source>
-        <target>Nuffi</target>
+        <target>Chuchi</target>
       </segment>
     </unit>
     <unit id="uxGIgrQ" name="Kampfzwerg">
@@ -2049,7 +2049,7 @@
       </notes>
       <segment>
         <source>Kampfzwerg</source>
-        <target>Kampfzwerg</target>
+        <target>Fido</target>
       </segment>
     </unit>
     <unit id="IciG2nh" name="Brummbrumm">
@@ -2060,7 +2060,7 @@
       </notes>
       <segment>
         <source>Brummbrumm</source>
-        <target>Brummbrumm</target>
+        <target>Pirulo</target>
       </segment>
     </unit>
     <unit id="FV3hUsg" name="Quälgeist">
@@ -2071,7 +2071,7 @@
       </notes>
       <segment>
         <source>Quälgeist</source>
-        <target>Quälgeist</target>
+        <target>Plutarco</target>
       </segment>
     </unit>
     <unit id="JaIWQ12" name="Wuschel">
@@ -2082,7 +2082,7 @@
       </notes>
       <segment>
         <source>Wuschel</source>
-        <target>Wuschel</target>
+        <target>Pulgoso</target>
       </segment>
     </unit>
     <unit id="RnbnUa2" name="Ratte">
@@ -2093,7 +2093,7 @@
       </notes>
       <segment>
         <source>Ratte</source>
-        <target>Ratte</target>
+        <target>el ratón</target>
       </segment>
     </unit>
     <unit id="JaPFGad" name="Ziege">
@@ -2104,7 +2104,7 @@
       </notes>
       <segment>
         <source>Ziege</source>
-        <target>Ziege</target>
+        <target>el mono</target>
       </segment>
     </unit>
     <unit id="pOPXT6h" name="Pudel">
@@ -2115,7 +2115,7 @@
       </notes>
       <segment>
         <source>Pudel</source>
-        <target>Pudel</target>
+        <target>el perrito</target>
       </segment>
     </unit>
     <unit id="MZpPqBp" name="Hamster">
@@ -2126,7 +2126,7 @@
       </notes>
       <segment>
         <source>Hamster</source>
-        <target>Hamster</target>
+        <target>el hamster</target>
       </segment>
     </unit>
     <unit id="zd.g_kB" name="Köter">
@@ -2137,7 +2137,7 @@
       </notes>
       <segment>
         <source>Köter</source>
-        <target>Köter</target>
+        <target>el perro cojo</target>
       </segment>
     </unit>
     <unit id="rLUU1dx" name="Schwein">
@@ -2148,7 +2148,7 @@
       </notes>
       <segment>
         <source>Schwein</source>
-        <target>Schwein</target>
+        <target>el cerdo</target>
       </segment>
     </unit>
     <unit id="kZlFNSy" name="Erdmännchen">
@@ -2159,7 +2159,7 @@
       </notes>
       <segment>
         <source>Erdmännchen</source>
-        <target>Erdmännchen</target>
+        <target>el conejo</target>
       </segment>
     </unit>
     <unit id="RNrqQOQ" name="Wasserschwein">
@@ -2170,7 +2170,7 @@
       </notes>
       <segment>
         <source>Wasserschwein</source>
-        <target>Wasserschwein</target>
+        <target>el loro</target>
       </segment>
     </unit>
     <unit id="NP2C_HM" name="Sumpfschildkröte">
@@ -2181,7 +2181,7 @@
       </notes>
       <segment>
         <source>Sumpfschildkröte</source>
-        <target>Sumpfschildkröte</target>
+        <target>el hurón</target>
       </segment>
     </unit>
     <unit id="i2s2Kep" name="Kätzchen">
@@ -2192,7 +2192,7 @@
       </notes>
       <segment>
         <source>Kätzchen</source>
-        <target>Kätzchen</target>
+        <target>el gato</target>
       </segment>
     </unit>
     <unit id="F6ZgJYM" name="einen Haufen Gerümpel ">
@@ -2313,7 +2313,7 @@
       </notes>
       <segment>
         <source>&lt;strong&gt;{citizen1}s&lt;/strong&gt; {animal} wurde heute Morgen in mehrere Stücke zerfetzt aufgefunden. Ein Stück wurde sogar aus dem Brunnen gefischt. Das erklärt auch den seltsamen Geschmack der Wasserrationen von heute Morgen...</source>
-        <target><![CDATA[<strong>{citizen1}s</strong> {animal} wurde heute Morgen in mehrere Stücke zerfetzt aufgefunden. Ein Stück wurde sogar aus dem Brunnen gefischt. Das erklärt auch den seltsamen Geschmack der Wasserrationen von heute Morgen...]]></target>
+        <target>{animal} conocido como {mascot} fue encontrado esta mañana partido en dos. Una parte fue hallada dentro del pozo. Eso debe explicar el sabor raro de las raciones de hoy...</target>
       </segment>
     </unit>
     <unit id="BKXfX1n">
