--- a/translations/ghost+intl-icu.en.xlf
+++ b/translations/ghost+intl-icu.en.xlf
@@ -1184,7 +1184,7 @@
       </notes>
       <segment>
         <source>Raben-Optionen</source>
-        <target>Crow options/target>
+        <target>Crow options</target>
       </segment>
     </unit>
     <unit id="jRT25y3" name="Events">
