--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -1595,7 +1595,7 @@
       <notes>
         <note category="german">Altar</note>
         <note category="from">db://BuildingPrototype</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Altar</source>
@@ -2086,7 +2086,7 @@
       <notes>
         <note category="german">Hammam</note>
         <note category="from">db://BuildingPrototype</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Hammam</source>
