--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -1924,7 +1924,7 @@
       </notes>
       <segment>
         <source>Du darfst ihn keinesfalls weitergeben oder öffentlich verfügbar machen, beispielsweise in einem Code-Repository.</source>
-        <target>Vous ne pouvez pas la distribuer ou la rendre public, par exemple dans un référentiel de code.</target>
+        <target>Vous ne pouvez pas la distribuer ou la rendre publique, par exemple dans un référentiel de code.</target>
       </segment>
     </unit>
     <unit id="hnZ6._r">
