--- a/translations/council+intl-icu.fr.xlf
+++ b/translations/council+intl-icu.fr.xlf
@@ -1470,7 +1470,7 @@
       </notes>
       <segment>
         <source>Er hat schon vorher geprahlt.</source>
-        <target>Déjà qu'il se la racontait avant..</target>
+        <target>Déjà qu'il se la racontait avant...</target>
       </segment>
     </unit>
     <unit id="FERl5T6" name="Wir sind sowas von im Ar...">
